--- a/Server/src/main/resources/templates/register.html
+++ b/Server/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>Registration Page</title>
     <head>
-        <link rel="stylesheet" th:href="@{css/styles.css}">
+        <link rel="stylesheet" th:href="@{resources/static/css/styles.css}">
     </head>
 </head>
 <body>
