--- a/Server/src/main/resources/templates/register.html
+++ b/Server/src/main/resources/templates/register.html
@@ -1,11 +1,211 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        body{
+            background: linear-gradient(to right, #333399, #ff00cc);
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            min-height: 90vh;
+            font-family: Arial, Roboto;
+        }
+
+        .signup-page{
+            padding: 4rem;
+            width: 300px;
+            border-radius: 15px;
+            background: white;
+            position: relative;
+            margin-top: 15px;
+        }
+
+        .signup-page::before{
+            content:'';
+            position: absolute;
+            background: rgba(255, 255, 255, 0.4);
+            inset: 0;
+            transform: rotate(-6deg);
+            z-index: -1;
+            border-radius: 15px;
+        }
+
+        .signup-header{
+            text-align: center;
+            margin: 2rem;
+        }
+
+
+        .signup-header h1{
+            font-size: 2rem;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+        }
+
+        .signup-header h1 + div {
+            font-size: calc(1rem * 0.8);
+            opacity: 0.8;
+        }
+
+        .signup-page-form {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .signup-page input[type = "text"],
+        .signup-page input[type = "password"]{
+            border: 1px #c0c0c0 solid;
+            outline: none;
+            background: #c0c0c0;
+            padding: 20px;
+            padding-left: 10px;
+            border-radius: 20px;
+            width: 93%;
+            transition: 0.15s;
+            opacity: 1;
+            font-size: 13px;
+        }
+
+        .signup-page input[type = "text"]:hover,
+        .signup-page input[type = "password"]:hover{
+            opacity: 0.6;
+        }
+
+        .signup-page input[placeholder = "Enter name"],
+        .signup-page input[placeholder = "Enter password"],
+        /*.signup-page input[placeholder = "Enter email"],*/
+        .signup-page input[placeholder = "Confirm password"]{
+            color: #36454f;
+        }
+
+        .name,
+        /*.email,*/
+        .dob,
+        .password{
+            color: #4c1111;
+            font: italic small-caps bold 12px/30px Georgia, serif;
+        }
+
+        .signin-message{
+            color: #4c1111;
+        }
+
+        .signup-button{
+            border: 1px black solid;
+            outline: none;
+            background: black;
+            color: white;
+            padding: 20px;
+            padding-left: 10px;
+            border-radius: 20px;
+            width: 104%;
+            transition: 0.15s;
+            opacity: 1;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        .signup-button:hover{
+            opacity: 0.7;
+        }
+
+        .signup-button:active{
+            background-color: white;
+            color: black;
+        }
+
+        .signin-message a{
+            text-decoration: none;
+            cursor: pointer;
+            color: #4c1111;
+            opacity: 1;
+        }
+
+        .signin-message a:hover{
+            opacity: 0.7;
+        }
+
+        @media (max-width: 768px){
+            body{
+                padding: 2rem 0;
+            }
+
+            .login-page{
+                width: 300px;
+                padding: 2rem;
+            }
+        }
+
+    </style>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <title>Login</title>
+</head>
+<body>
+<div class = "signup-page-container">
+    <div class = "signup-page">
+        <div class="signup-header">
+            <div class="title">
+                <h1>Create new Account</h1>
+            </div>
+            <div class="signin-message">
+                Already Registered? Log in <a href="login"><span class = "link">here</span></a>.
+            </div>
+        </div>
+        <form class="signup-page-form">
+            <div class="enter-name">
+                <div class="name">EMPLOYEE ID</div>
+                <input type="text" placeholder="Enter id" required autofocus>
+            </div>
+            <!-- <div class="enter-email">
+                <div class="email">EMAIL</div>
+                <input type="text" placeholder="Enter email" required>
+            </div> -->
+            <div class="enter-password">
+                <div class="password">PASSWORD</div>
+                <input type="password" placeholder="Enter password" required>
+            </div>
+            <div class="enter-dob">
+                <div class="dob">CONFIRM PASSWORD</div>
+                <input type="password" placeholder="Confirm password" required>
+            </div>
+            <button class="signup-button" type="submit">Sign in</button>
+        </form>
+        <br>
+        <br>
+
+    </div>
+</div>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Registration Page</title>
     <head>
-        <link rel="stylesheet" th:href="@{resources/static/css/styles.css}">
+        <link rel="stylesheet" th:href="@{styles.css}">
     </head>
 </head>
+
+<head>
+    <title>Registration Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{styles.css}">
+</head>
+
+
 <body>
 <h2>Registration Form</h2>
 <form method="post" action="/register">
@@ -18,4 +218,4 @@
     <input type="submit" value="Register">
 </form>
 </body>
-</html>
+</html> -->
