--- a/Server/src/main/resources/templates/login.html
+++ b/Server/src/main/resources/templates/login.html
@@ -317,7 +317,7 @@
 
     <div class="sign-up">
       Don't have an account?
-      <a href="signup.html">Signup here!</a>
+      <a href="register">Signup here!</a>
     </div>
     <div class="login-social-platforms">
       <div>Log in with</div>
