--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
@@ -206,7 +208,7 @@
       min-height: 100vh;
       display: flex;
       align-items: center;
-      background: url(/resources/home.jpg) no-repeat;
+      background: url(/resources/home.webp) no-repeat;
       background-size: cover;
       background-position: top;
     }
@@ -216,7 +218,7 @@
     }
 
     .home .content h3{
-      color: var(--white);
+      color: /*var(--white)*/ gray;
       font-size: 6rem;
       line-height: 1.4;
       font-weight: 400;
@@ -335,31 +337,31 @@
 
     /* end */
 
-    /* animals */
+    /* airplanes */
 
-    .animal .box-container{
+    .airplane .box-container{
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(25rem,1fr));
       gap: 2rem;
     }
 
-    .animal .box-container .box{
+    .airplane .box-container .box{
       height: 100%;
       position: relative;
       overflow: hidden;
     }
 
-    .animal .box-container .box img{
+    .airplane .box-container .box img{
       height: 100%;
       width: 100%;
       object-fit: cover;
     }
 
-    .animal .box-container .box:hover img{
+    .airplane .box-container .box:hover img{
       transform: scale(1.1);
     }
 
-    .animal .box-container .box .content{
+    .airplane .box-container .box .content{
       text-align: center;
       position: absolute;
       bottom: 0;
@@ -369,7 +371,7 @@
       transition: 0.5s ease;
     }
 
-    .animal .box-container .box:hover::after{
+    .airplane .box-container .box:hover::after{
       content: '';
       position: absolute;
       top: 0; left: 0;
@@ -380,13 +382,13 @@
       transition: 0.5s ease;
     }
 
-    .animal .box-container .box .content h3{
+    .airplane .box-container .box .content h3{
       text-align: center;
       font-size: 3rem;
-      color: var(--white);
+      color: /*var(--white)*/ red;
     }
 
-    .animal .box-container .box:is(:hover, :focus-within) .content{
+    .airplane .box-container .box:is(:hover, :focus-within) .content{
       transform: translateY(-20px);
     }
 
@@ -721,24 +723,24 @@
 
 <header class="header">
 
-  <a href="#" class="logo"> <i class="fas fa-paw"></i> zoo</a>
+  <a href="#" class="logo"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M381 114.9L186.1 41.8c-16.7-6.2-35.2-5.3-51.1 2.7L89.1 67.4C78 73 77.2 88.5 87.6 95.2l146.9 94.5L136 240 77.8 214.1c-8.7-3.9-18.8-3.7-27.3 .6L18.3 230.8c-9.3 4.7-11.8 16.8-5 24.7l73.1 85.3c6.1 7.1 15 11.2 24.3 11.2H248.4c5 0 9.9-1.2 14.3-3.4L535.6 212.2c46.5-23.3 82.5-63.3 100.8-112C645.9 75 627.2 48 600.2 48H542.8c-20.2 0-40.2 4.8-58.2 14L381 114.9zM0 480c0 17.7 14.3 32 32 32H608c17.7 0 32-14.3 32-32s-14.3-32-32-32H32c-17.7 0-32 14.3-32 32z"/></svg> Air</a>
 
   <nav class="navbar">
     <a href="#home">home</a>
-    <a href="#about">about</a>
-    <a href="#gallery">gallery</a>
-    <a href="#animal">animal</a>
-    <a href="#pricing">pricing</a>
-    <a href="#contact">contact</a>
+    <a href="#schedule">schedule</a>
+    <a href="#employees">employees</a>
+    <a href="#flights">flights</a>
+    <!--<a href="#pricing">pricing</a>
+    <a href="#contact">contact</a>-->
   </nav>
 
   <div class="icons">
-    <div id="login-btn" class="fas fa-user"></div>
+    <!--<div id="login-btn" class="fas fa-user"></div>-->
     <div id="menu-btn" class="fas fa-bars"></div>
   </div>
 
   <!-- login form -->
-
+<!--
   <form action="" class="login-form">
 
     <h3>login form</h3>
@@ -751,7 +753,7 @@
     </div>
     <a href="#" class="btn">login</a>
 
-  </form>
+  </form> -->
 
 </header>
 
@@ -764,8 +766,8 @@
 
   <div class="content">
     <h3>enjoy the wonderful <br>
-      adventure of the <br> animals</h3>
-    <a href="#" class="btn">meet the zoo</a>
+      adventure of the <br> clouds </h3>
+  <!--  <a href="#" class="btn">meet the zoo</a> -->
   </div>
 
   <img src="/resources/bottom_wave.png" alt="" class="wave">
@@ -778,33 +780,33 @@
 
 <section class="about" id="about">
 
-  <h2 class="deco-title">About us</h2>
+  <h2 class="deco-title"></h2>
 
   <div class="box-container">
 
     <div class="image">
-      <img src="/resources/about.png" alt="">
+      <img src="/resources/about.jpeg" alt="">
     </div>
 
     <div class="content">
-      <h3 class="title">you can find all the most popular species</h3>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+      <h3 class="title">you can find all the information you need</h3>
+      <!--<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
         Nesciunt temporibus ipsum consectetur asperiores modi ratione.
         Sit, dolores voluptas consequuntur dolor tempore quibusdam est
-        obcaecati possimus omnis, officiis molestias et sapiente.</p>
+        obcaecati possimus omnis, officiis molestias et sapiente.</p>-->
 
       <div class="icons-container">
         <div class="icons">
-          <i class="fas fa-graduation-cap"></i>
-          <h3>we educate</h3>
-        </div>
-        <div class="icons">
-          <i class="fas fa-bullhorn"></i>
-          <h3>we play</h3>
+          <i class="fas fa-calendar"></i>
+          <h3>schedule</h3>
         </div>
         <div class="icons">
           <i class="fas fa-book-open"></i>
-          <h3>getting to know</h3>
+          <h3>employees</h3>
+        </div>
+        <div class="icons">
+          <i class="fas fa-bullhorn"></i>
+          <h3>flights</h3>
         </div>
       </div>
     </div>
@@ -861,16 +863,16 @@
 
 <!-- end -->
 
-<!-- animals -->
+<!-- airplanes -->
 <!--
-<section class="animal" id="animal">
+<section class="airplane" id="airplane">
 
-  <h2 class="heading">animals</h2>
+  <h2 class="heading">airplanes</h2>
 
   <div class="box-container">
 
     <div class="box">
-      <img src="images/animal_1.jpg" alt="">
+      <img src="images/airplane_1.jpg" alt="">
       <div class="content">
         <h3>cameleon</h3>
         <a href="#" class="btn">see datails</a>
@@ -878,7 +880,7 @@
     </div>
 
     <div class="box">
-      <img src="images/animals_2.jpg" alt="">
+      <img src="images/airplanes_2.jpg" alt="">
       <div class="content">
         <h3>zebra</h3>
         <a href="#" class="btn">see datails</a>
@@ -886,7 +888,7 @@
     </div>
 
     <div class="box">
-      <img src="images/animals_3.jpg" alt="">
+      <img src="images/airplanes_3.jpg" alt="">
       <div class="content">
         <h3>giraffe</h3>
         <a href="#" class="btn">see datails</a>
@@ -894,7 +896,7 @@
     </div>
 
     <div class="box">
-      <img src="images/animals_4.jpg" alt="">
+      <img src="images/airplanes_4.jpg" alt="">
       <div class="content">
         <h3>monkey</h3>
         <a href="#" class="btn">see datails</a>
@@ -1002,34 +1004,34 @@
   <div class="box-container">
 
     <div class="box">
-      <h3><i class="fas fa-paw"></i> zoo</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <h3><i class="fas fa-airplane"></i> air</h3>
+     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
       <p class="links"><i class="fas fa-clock"></i>monday - friday</p>
-      <p class="days">7:00AM - 11:00PM</p>
+      <!--<p class="days">non-stop</p>-->
     </div>
 
     <div class="box">
       <h3>Contact Info</h3>
       <a href="#" class="links"><i class="fas fa-phone"></i> 1245-147-2589</a>
-      <a href="#" class="links"><i class="fas fa-phone"></i> 1245-147-2589</a>
-      <a href="#" class="links"><i class="fas fa-envelope"></i> info@zoolife.com</a>
-      <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> karachi, pakistan</a>
+      <a href="#" class="links"><i class="fas fa-phone"></i> 1245-137-2429</a>
+      <a href="#" class="links"><i class="fas fa-envelope"></i> crew@scheduler.com</a>
+      <a href="#" class="links"><i class="fas fa-map-marker-alt"></i> everywhere</a>
     </div>
 
     <div class="box">
       <h3>quick links</h3>
       <a href="#" class="links"> <i class="fas fa-arrow-right"></i>home</a>
-      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>about</a>
-      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>gallery</a>
-      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>animal</a>
-      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>pricing</a>
+      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>schedule</a>
+      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>employees</a>
+      <a href="#" class="links"> <i class="fas fa-arrow-right"></i>flights</a>
+      <!--<a href="#" class="links"> <i class="fas fa-arrow-right"></i>pricing</a> -->
     </div>
 
     <div class="box">
       <h3>newsletter</h3>
-      <p>subscribe for latest updates</p>
-      <input type="email" placeholder="Your Email" class="email">
-      <a href="#" class="btn">subscribe</a>
+      <p>you will see here the latest updates</p>
+      <!--<input type="email" placeholder="Your Email" class="email">
+      <a href="#" class="btn">subscribe</a> -->
       <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
@@ -1040,7 +1042,7 @@
 
   </div>
 
-  <div class="credit">&copy; 2022 zoolife. All rights reserved by <a href="#" class="link">ninjashub</a></div>
+  <div class="credit">&copy; 2023 airlines. All rights reserved by <a href="#" class="link">antonia</a></div>
 
 </section>
 
