--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -729,7 +729,7 @@
     <a href="http://localhost:8084/home">home</a>
     <a href="#schedule">schedule</a>
     <a href="http://localhost:8084/employees">employees</a>
-    <a href="#flights">flights</a>
+    <a href="http://localhost:8084/flights">flights</a>
     <!--<a href="#pricing">pricing</a>
     <a href="#contact">contact</a>-->
   </nav>
