--- a/Server/src/main/resources/templates/pilots.html
+++ b/Server/src/main/resources/templates/pilots.html
@@ -101,7 +101,7 @@
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Home</span>
             </a></li>
-            <li><a href="#">
+            <li><a href="lalala">
                 <i class="fas fa-bullhorn"></i>
                 <span class="nav-item">Flights</span>
             </a></li>
